cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
project(Anode CXX)
find_package(SDL2 REQUIRED)
find_package(SDL2_IMAGE REQUIRED)
file(GLOB SOURCES ${PROJECT_NAME}/*cpp)
file(GLOB HEADERS ${PROJECT_NAME}/*.h*)
file(GLOB RESOURCES ${PROJECT_NAME}/*png)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIRS})
if(APPLE)
    set_source_files_properties(${RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
    add_executable(Anode MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${RESOURCES})
elseif(WIN32)
	add_executable(Anode WIN32 ${SOURCES} ${HEADERS})
else()
    add_executable(Anode ${SOURCES} ${HEADERS} ${RESOURCES}) 
endif()
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES})
file(COPY ${RESOURCES} DESTINATION ${CMAKE_BINARY_DIR})
